<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Movie Settings">


        <SwitchPreference
            android:defaultValue="true"
            android:key="bollywood_state"
            android:summary="@string/pref_bolloywood_summary"
            android:title="@string/pref_include_bolloywood" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="anime_state"
            android:title="@string/pref_include_anime" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Sync Settings">
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_add_friends_to_messages" />


        <ListPreference
            android:defaultValue="180"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sync_frequency" />
    </PreferenceCategory>
</PreferenceScreen>